Fixed bug where part of header menu is shown on mobile viewport widths

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -7,7 +7,7 @@
 
 .header ul {
   margin: 0;
-  padding: 10px;
+  padding: 0px;
   list-style: none;
   overflow: hidden;
 }
